<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f4f4f4"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/sNoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".50"
        android:gravity="center"
        android:padding="10dp"
        android:scrollbars="horizontal"
        android:text="@string/s_no"
        android:textColor="@color/navColor"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.50"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/drug_name"
        android:textColor="@color/navColor"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/strengthTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.50"
        android:gravity="center"
        android:padding="10dp"
        android:text="strenth"
        android:textColor="@color/navColor"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/quantityTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.50"
        android:gravity="center"
        android:padding="10dp"
        android:text="quantity"
        android:textColor="@color/navColor"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/routeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/route"
        android:textColor="@color/navColor"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/frequencyTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="10dp"
        android:scrollbars="horizontal"
        android:text="@string/frequency"
        android:textColor="@color/navColor"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/durationTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/duration"
        android:textColor="@color/navColor"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="10dp"
        android:scrollbars="horizontal"
        android:text="@string/instruction"
        android:textColor="@color/navColor"
        android:textSize="11sp" />

</LinearLayout>

